# interview

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  design.md  docker-compose.prod.yml  docker-compose.yml  产品需求文档-v3.0.md
api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
api/evaluations/: career_planning_cases.json  coaching_skill_cases.json  retrieval_cases.json
api/migrations/: env.py
api/migrations/versions/: 20260712_0001_create_users_and_sessions.py  20260712_0002_create_training_drafts.py  (+33 more)
api/scripts/: evaluate_career_planning.py  evaluate_coaching_skills.py  evaluate_retrieval.py  index_knowledge_packs.py  index_question_bank.py  seed_question_bank.py
api/tests/: test_ability_profile.py  test_account_data.py  test_admin_management.py  test_admin_management_api.py  test_admin_question_api.py  test_agent_foundation.py  test_ark_text.py  test_authentication.py  test_baidu_ocr.py  test_boards.py  test_career.py  test_career_planning_evaluations.py  test_claim_verification.py  test_coaching.py  test_coaching_evaluations.py  test_coding.py  test_dashscope.py  test_document_api.py  test_document_parser.py  test_drafts.py  test_frontend_behavior_contracts.py  test_frontend_security_contracts.py  test_interview_planning.py  test_interview_reports.py  test_jobs.py  test_knowledge_packs.py  test_login_rate_limit.py  test_question_bank.py  test_question_sets.py  test_rag_services.py  test_readiness.py  test_request_observability.py  test_resume_extraction.py  test_retrieval_processing.py  test_speech.py  test_xfyun_tts.py
(+311 files in other folders)
