[project]
name = "interview-copilot-api"
version = "0.1.0"
description = "AI interview orchestration and document processing service"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.16,<2",
  "argon2-cffi>=25.1,<26",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "langgraph>=0.6,<2",
  "orjson>=3.11,<4",
  "pgvector>=0.4,<1",
  "psycopg[binary]>=3.2,<4",
  "pydantic-settings>=2.10,<3",
  "pymupdf>=1.26,<2",
  "python-docx>=1.2,<2",
  "python-multipart>=0.0.20,<1",
  "redis>=6.2,<7",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.35,<1",
  "websockets>=15,<16",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview_copilot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
